// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChartRange /> should render properly 1`] = `
.emotion-19 {
  padding-right: 32px;
  padding-bottom: 32px;
  width: 470px;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
  border-radius: 2px;
  padding: 16px;
}

.emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 24px;
}

.emotion-17 .ErrorBoundary > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-17 .Loading {
  background-color: transparent;
  box-shadow: none;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-16 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: calc(33.33333333333333% - 10.666666666666666px);
  margin-right: 16px;
  padding-bottom: 16px;
}

.emotion-16 > div:nth-of-type(3n) {
  margin-right: 0;
}

.emotion-1 {
  text-transform: uppercase;
  font-family: Roboto Condensed;
  color: #b3b3b3;
  padding-bottom: 4px;
}

.emotion-2 {
  border: 1px solid #3b3b3b;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-11 {
  height: 19px;
  margin-bottom: 4px;
}

.emotion-15 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.emotion-14 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #b3b3b3;
}

.emotion-14:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-14[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-14:hover,
.emotion-14:focus {
  color: #ffffff;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

<div
  className="emotion-19"
>
  <div
    className="emotion-18"
  >
    <h3
      className="emotion-0"
    >
      source.filesize
    </h3>
    <div
      className="emotion-17"
    >
      <div
        className="emotion-16"
      >
        <div>
          <div
            className="emotion-1"
          >
            count
          </div>
          <div
            className="emotion-2"
          >
            580
          </div>
        </div>
        <div>
          <div
            className="emotion-1"
          >
            min
          </div>
          <div
            className="emotion-2"
          >
            180
          </div>
        </div>
        <div>
          <div
            className="emotion-1"
          >
            max
          </div>
          <div
            className="emotion-2"
          >
            8,525
          </div>
        </div>
        <div>
          <div
            className="emotion-1"
          >
            avg
          </div>
          <div
            className="emotion-2"
          >
            899.569
          </div>
        </div>
        <div>
          <div
            className="emotion-1"
          >
            sum
          </div>
          <div
            className="emotion-2"
          >
            521,750
          </div>
        </div>
        <div>
          <div
            className="emotion-11"
          >
             
          </div>
          <div
            className="emotion-15"
          >
            <button
              aria-label="Add Filter"
              className="emotion-14"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-13"
              >
                <div
                  className="emotion-12"
                >
                  <svg
                    data-file-name="filter.svg"
                    width={20}
                  />
                </div>
                Add Filter
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChartRange /> should render properly without data 1`] = `
.emotion-9 {
  padding-right: 32px;
  padding-bottom: 32px;
  width: 470px;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
  border-radius: 2px;
  padding: 16px;
}

.emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 24px;
}

.emotion-7 .ErrorBoundary > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-7 .Loading {
  background-color: transparent;
  box-shadow: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: calc(33.33333333333333% - 10.666666666666666px);
  margin-right: 16px;
  padding-bottom: 16px;
}

.emotion-6 > div:nth-of-type(3n) {
  margin-right: 0;
}

.emotion-1 {
  height: 19px;
  margin-bottom: 4px;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #b3b3b3;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4:hover,
.emotion-4:focus {
  color: #ffffff;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-8"
  >
    <h3
      className="emotion-0"
    >
      source.filesize
    </h3>
    <div
      className="emotion-7"
    >
      <div
        className="emotion-6"
      >
        <div>
          <div
            className="emotion-1"
          >
             
          </div>
          <div
            className="emotion-5"
          >
            <button
              aria-label="Add Filter"
              className="emotion-4"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="emotion-2"
                >
                  <svg
                    data-file-name="filter.svg"
                    width={20}
                  />
                </div>
                Add Filter
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
